# VidQuery.AI

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  Readme.md  Untitled-1.json  app.py  cc.py  config.py  main.py  merag_chunks.py  newembeddings.joblib  preprocess_json.py  process_incoming.py  process_videos.py  prompt.txt  pyproject.toml  read_chunks.py  response.txt
.github/workflows/: deploy.yml
database/: transcripts.db
jsons/: 01_Introduction.mp3.json  02_Installation.mp3.json  03_Python.mp3.json  04_Creating.mp3.json  05_Creating.mp3.json  06_Array.mp3.json  07_Reshaping.mp3.json  08_Indexing.mp3.json  09_Slicing.mp3.json  10_Copy.mp3.json  11_Common.mp3.json  12_Multi-dimensional.mp3.json  13_3D.mp3.json  14_Vectorization.mp3.json  15_Vector.mp3.json  16_Math.mp3.json  17_Mathematical.mp3.json  18_Other.mp3.json
scripts/: start_public_local.ps1
src/: 1_video_to_mp3.py  2_mp3_to_json.py  3_merge_chunks.py  3_preprocess_json.py  4_embed_data.py  4_merag_chunks.py  5_get_transcript.py  database.py
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: test_api.py
unuse/: stt.py
