[project]
name = "VidQuery.AI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask==3.0.3",
    "mysql-connector-python>=9.7.0",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "youtube-transcript-api>=1.2.4",
]

[tool.pyright]
extraPaths = ["."]